kubernetes/development_proxy/cloudjobs-database-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: cloudjobs-database
  name: cloudjobs-database
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: cloudjobs-database
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: cloudjobs-database
    spec:
      containers:
      - image: mongo
        imagePullPolicy: ""
        name: cloudjobs-database
        resources: {}
      restartPolicy: Always
      serviceAccountName: ""
      volumes: null
status: {}
