kubernetes/development_proxy/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: frontend
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: frontend
    spec:
      containers:
      - image: cloudjobs-frontend
        imagePullPolicy: "Never"
        name: frontend
        ports:
        - containerPort: 80
        resources: {}
        volumeMounts:
        - mountPath: /usr/share/nginx/html
          name: frontend-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: frontend-claim0
        persistentVolumeClaim:
          claimName: frontend-claim0
status: {}
