kubernetes/development_proxy/search-service-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: search-service
  name: search-service
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: search-service
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.21.0 ()
      creationTimestamp: null
      labels:
        io.kompose.service: search-service
    spec:
      containers:
      - env:
        - name: ITJOBS_KEY
          value: 
        - name: IT_JOBS_URL
          value: http://api.itjobs.pt
        - name: SERVICE_DB_HOSTNAME
          value: cloudjobs_database
        image: cloudjobs-search-service
        imagePullPolicy: "Never"
        name: search-service
        ports:
        - containerPort: 10001
        resources: {}
        volumeMounts:
        - mountPath: /var/app/src
          name: search-service-claim0
      restartPolicy: Always
      serviceAccountName: ""
      volumes:
      - name: search-service-claim0
        persistentVolumeClaim:
          claimName: search-service-claim0
status: {}
