kubernetes/development_proxy/agenda-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: agenda-service
  name: agenda-service
spec:
  ports:
  - name: "10002"
    port: 10002
    targetPort: 10002
  selector:
    io.kompose.service: agenda-service
status:
  loadBalancer: {}
