kubernetes/development_proxy/auth-service-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.21.0 ()
  creationTimestamp: null
  labels:
    io.kompose.service: auth-service
  name: auth-service
spec:
  ports:
  - name: "10000"
    port: 10000
    targetPort: 10000
  selector:
    io.kompose.service: auth-service
status:
  loadBalancer: {}
